<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".fragment.ProfielFragment">
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5237790405042637/9476857625"
        />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:textStyle="bold"
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>


    <TextView
        android:textStyle="bold"
        android:id="@+id/txtNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/txtEmail"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>


    <TextView
        android:textStyle="bold"
        android:id="@+id/txtCollege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_name"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:textStyle="bold"
        android:id="@+id/txtBranch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/branch_name"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>
    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

</LinearLayout>