<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/atplc"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_background"
        android:layout_marginTop="22dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:text="@string/_91"
        android:padding="13dp"
        android:inputType="phone"
        android:hint="@string/enter_phone_number" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/rectangle_background2"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/send_otp" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>

    <Button
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/rectangle_background2"
        android:id="@+id/btnResentOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/resend_otp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"/>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5237790405042637/7759794732"
        />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-5237790405042637/2315896360"
        />
</LinearLayout>
</ScrollView>